--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@rocketseat/eslint-config": "^2.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.4",
     "jest": "^29.6.4",
     "jest-environment-jsdom": "^29.6.4"
   }
